# ImageManager

./: .gitignore  main.py  main.ui  main_ui.py  main_with_icons.py  pyproject.toml
.trae/rules/: project_rules.md
config/: settings.json
data/: image_manager.db
src/: app.py
src/core/: database.py  initializer.py  scanner_thread.py
src/models/: __init__.py  album.py  directory.py  image.py  thumbnail.py
src/ui/: main_window.py
