[project]
name = "imagemanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "pillow-heif>=1.1.0",
    "pyside6>=6.9.2",
    "qt-material>=2.17",
    "qtawesome>=1.4.0",
    "sqlalchemy>=2.0.43",
]
